[package]
name = "breakout2"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.2" # make sure this is the latest version

# [features]
# Enable stepping-based debugging of Bevy systems
# bevy_debug_stepping = ["bevy_internal/bevy_debug_stepping"]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3